# carsguide_harvest

./: ADAS_extraction_test_HR.txt  ADAS_extraction_test_HR_SB.txt  ADAS_extraction_test_HR_SB_v2.txt  README.md  Sample data_veh.xlsx  pyproject.toml  selenium_carsguide_v1.py
