[tool.poetry]
name = "carsguide-harvest"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.21.0"
tqdm = "^4.66.4"
pandas = "^2.2.2"
numpy = "^1.26.4"
datetime = "^5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
